feat: add authentication with clerk

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL="postgresql://neondb_owner:npg_0smfJr9vuCwD@ep-broad-sound-a5224rqj-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1jb2x0LTg4LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_DXp2UubgQ31UQ21cgF4Flaa43yEJ0xVJhR4lK9EM5r
