--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://neondb_owner:npg_0smfJr9vuCwD@ep-broad-sound-a5224rqj-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://postgres:password@localhost:5433/invest-ia"
 
 # Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1jb2x0LTg4LmNsZXJrLmFjY291bnRzLmRldiQ
